--- a/ops-files/guardian-runtime.yml
+++ b/ops-files/guardian-runtime.yml
@@ -7,10 +7,12 @@
   value: guardian
 
 - type: replace
-  path: /instance_groups/name=concourse/jobs/name=worker/properties/garden?
+  path: /instance_groups/name=concourse/jobs/name=worker/properties/garden/dns_servers?
   value:
-    dns_servers:
-      - 8.8.8.8
-      - 1.1.1.1
-    network:
-      allow_host_access: true
+  - 8.8.8.8
+  - 1.1.1.1
+
+- type: replace
+  path: /instance_groups/name=concourse/jobs/name=worker/properties/garden/network?
+  value:
+    allow_host_access: true
