--- a/pipeline-template.yml
+++ b/pipeline-template.yml
@@ -731,7 +731,7 @@ jobs:
             - name: image
           params:
             CONTEXT: build-context
-            IMAGE_ARG_base_image: integration-image
+            IMAGE_ARG_BASE_IMAGE: integration-image/image.tar
             BUILDKIT_PROGRESS: plain
           run:
             path: sh
