Direct gaol based testing

--- a/.envrc
+++ b/.envrc
@@ -10,3 +10,5 @@ eval "$(devbox generate direnv --print-envrc)"
 
 # Add local bin directory to PATH for fly CLI
 PATH_add bin
+
+export BOSH_SSH_OPTS="-o ServerAliveInterval=2 -o ServerAliveCountMax=1 -o TCPKeepAlive=yes"
