Fix: Add oci-build-task dependency to both warden deployment jobs
Both deploy-zookeeper-on-warden-runc and deploy-zookeeper-on-upstream-warden
jobs use the oci-build-task image for the create-light-stemcell task, but
were missing the 'get: oci-build-task' step in their plans.

This caused the build to error with:
'missing image artifact source: oci-build-task'

--- a/pipeline-template.yml
+++ b/pipeline-template.yml
@@ -667,6 +667,7 @@ jobs:
           - get: noble-patched-stemcell-image
             trigger: true
             passed: [build-noble-patched-stemcell-image]
+          - get: oci-build-task
           - get: zookeeper-release
       - task: create-light-stemcell
         image: oci-build-task
@@ -812,6 +813,7 @@ jobs:
           - get: noble-patched-stemcell-image
             trigger: true
             passed: [build-noble-patched-stemcell-image]
+          - get: oci-build-task
           - get: zookeeper-release
       - task: create-light-stemcell
         image: oci-build-task
