--- a/pipeline-template.yml
+++ b/pipeline-template.yml
@@ -810,49 +810,7 @@ jobs:
           - get: upstream-warden-cpi-image
             trigger: true
             passed: [build-upstream-warden-cpi-image]
-          - get: noble-patched-stemcell-image
-            trigger: true
-            passed: [build-noble-patched-stemcell-image]
-          - get: oci-build-task
           - get: zookeeper-release
-      - task: create-light-stemcell
-        image: oci-build-task
-        config:
-          platform: linux
-          outputs:
-            - name: light-stemcell
-          run:
-            path: sh
-            args:
-              - -exc
-              - |
-                echo "=== Creating Light Stemcell Metadata ==="
-                
-                IMAGE_URL="((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
-                OUTPUT_DIR="light-stemcell"
-                
-                mkdir -p "$OUTPUT_DIR"
-                
-                # Create stemcell metadata in BOSH standard format
-                cat > "$OUTPUT_DIR/stemcell.MF" <<'STEMCELL_MF'
-                ---
-                name: bosh-warden-ubuntu-noble
-                version: "light"
-                api_version: 3
-                bosh_protocol: '1'
-                sha1: da39a3ee5e6b4b0d3255bfef95601890afd80709
-                operating_system: ubuntu-noble
-                stemcell_formats:
-                - warden-light
-                cloud_properties:
-                  image_reference: "((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
-                STEMCELL_MF
-                
-                # Create empty image file (required by BOSH stemcell format)
-                touch "$OUTPUT_DIR/image"
-                
-                echo "Stemcell metadata:"
-                cat "$OUTPUT_DIR/stemcell.MF"
       - task: deploy-with-upstream-warden-cpi
         privileged: true
         image: upstream-warden-cpi-image
@@ -860,7 +818,6 @@ jobs:
           platform: linux
           inputs:
             - name: zookeeper-release
-            - name: light-stemcell
           run:
             path: bash
             args:
@@ -868,10 +825,9 @@ jobs:
               - |
                 set -euo pipefail
                 
-                echo "=== Upstream Warden CPI Test with Light Stemcell ==="
+                echo "=== Upstream Warden CPI Test (Unmodified) ==="
                 echo "This uses the exact upstream warden-cpi image from cloudfoundry/bosh"
                 echo "Base image: bosh/main-bosh-docker"
-                echo "Stemcell: Light stemcell referencing patched ubuntu-noble image"
                 
                 # Mount cgroup filesystem for Garden
                 echo "=== Setting up cgroup v2 ==="
@@ -888,12 +844,10 @@ jobs:
                 echo "=== BOSH Environment ==="
                 bosh env
                 
-                # Create light stemcell tarball and upload
-                echo "=== Uploading Light Stemcell ==="
-                cd light-stemcell
-                tar -czf /tmp/light-stemcell.tgz stemcell.MF image
-                cd ..
-                bosh upload-stemcell /tmp/light-stemcell.tgz
+                # Upload stemcell
+                echo "=== Uploading Warden Stemcell ==="
+                bosh upload-stemcell --sha1 86662513fbbb9200aca8f0c24fa69e822f49e18c \
+                  https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-jammy-go_agent?v=1.631
                 
                 # Upload zookeeper release
                 echo "=== Uploading Zookeeper Release ==="
@@ -902,9 +856,9 @@ jobs:
                 bosh upload-release
                 cd ..
                 
-                # Deploy zookeeper with light stemcell
-                echo "=== Deploying Zookeeper with Light Stemcell ==="
-                cat > /tmp/light-stemcell-ops.yml <<'OPSFILE'
+                # Deploy zookeeper
+                echo "=== Deploying Zookeeper ==="
+                cat > /tmp/single-instance.yml <<'OPSFILE'
                 ---
                 - type: replace
                   path: /instance_groups/name=zookeeper/instances
@@ -915,17 +869,14 @@ jobs:
                 - type: remove
                   path: /instance_groups/name=smoke-tests
                 - type: replace
-                  path: /stemcells
-                  value:
-                    - alias: default
-                      os: ubuntu-noble
-                      version: light
+                  path: /stemcells/alias=default/os
+                  value: ubuntu-jammy
                 OPSFILE
                 
                 bosh -n deploy \
                   -d zookeeper \
                   zookeeper-release/manifests/zookeeper.yml \
-                  -o /tmp/light-stemcell-ops.yml
+                  -o /tmp/single-instance.yml
                 
                 echo "=== Zookeeper Deployment Status ==="
                 bosh -d zookeeper instances --details
