--- a/pipeline-template.yml
+++ b/pipeline-template.yml
@@ -810,7 +810,49 @@ jobs:
           - get: upstream-warden-cpi-image
             trigger: true
             passed: [build-upstream-warden-cpi-image]
+          - get: noble-patched-stemcell-image
+            trigger: true
+            passed: [build-noble-patched-stemcell-image]
+          - get: oci-build-task
           - get: zookeeper-release
+      - task: create-light-stemcell
+        image: oci-build-task
+        config:
+          platform: linux
+          outputs:
+            - name: light-stemcell
+          run:
+            path: sh
+            args:
+              - -exc
+              - |
+                echo "=== Creating Light Stemcell Metadata ==="
+                
+                IMAGE_URL="((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
+                OUTPUT_DIR="light-stemcell"
+                
+                mkdir -p "$OUTPUT_DIR"
+                
+                # Create stemcell metadata in BOSH standard format
+                cat > "$OUTPUT_DIR/stemcell.MF" <<'STEMCELL_MF'
+                ---
+                name: bosh-warden-ubuntu-noble
+                version: "light"
+                api_version: 3
+                bosh_protocol: '1'
+                sha1: da39a3ee5e6b4b0d3255bfef95601890afd80709
+                operating_system: ubuntu-noble
+                stemcell_formats:
+                - warden-light
+                cloud_properties:
+                  image_reference: "((docker_registry_host))/ubuntu-noble-stemcell-patched:latest"
+                STEMCELL_MF
+                
+                # Create empty image file (required by BOSH stemcell format)
+                touch "$OUTPUT_DIR/image"
+                
+                echo "Stemcell metadata:"
+                cat "$OUTPUT_DIR/stemcell.MF"
       - task: deploy-with-upstream-warden-cpi
         privileged: true
         image: upstream-warden-cpi-image
@@ -818,6 +860,7 @@ jobs:
           platform: linux
           inputs:
             - name: zookeeper-release
+            - name: light-stemcell
           run:
             path: bash
             args:
@@ -825,17 +868,17 @@ jobs:
               - |
                 set -euo pipefail
                 
-                echo "=== Upstream Warden CPI Test (Unmodified) ==="
-                echo "This uses the exact upstream warden-cpi image from cloudfoundry/bosh"
-                echo "Base image: bosh/main-bosh-docker"
+                echo "=== Upstream Warden CPI Test with Light Stemcell ==="
+                echo "Latest upstream warden-cpi with new garden-cpi release"
+                echo "Using light stemcells for fast deployment"
                 
                 # Mount cgroup filesystem for Garden
                 echo "=== Setting up cgroup v2 ==="
                 mkdir -p /sys/fs/cgroup
                 mount -t cgroup2 none /sys/fs/cgroup || echo "cgroup2 already mounted"
                 
-                # Use unmodified upstream start-bosh script
-                echo "=== Starting BOSH Director with upstream start-bosh ==="
+                # Use upstream start-bosh script
+                echo "=== Starting BOSH Director ==="
                 /usr/local/bin/start-bosh
                 
                 # Source BOSH environment
@@ -844,10 +887,12 @@ jobs:
                 echo "=== BOSH Environment ==="
                 bosh env
                 
-                # Upload stemcell
-                echo "=== Uploading Warden Stemcell ==="
-                bosh upload-stemcell --sha1 86662513fbbb9200aca8f0c24fa69e822f49e18c \
-                  https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-jammy-go_agent?v=1.631
+                # Create light stemcell tarball and upload
+                echo "=== Uploading Light Stemcell ==="
+                cd light-stemcell
+                tar -czf /tmp/light-stemcell.tgz stemcell.MF image
+                cd ..
+                bosh upload-stemcell /tmp/light-stemcell.tgz
                 
                 # Upload zookeeper release
                 echo "=== Uploading Zookeeper Release ==="
@@ -856,9 +901,9 @@ jobs:
                 bosh upload-release
                 cd ..
                 
-                # Deploy zookeeper
-                echo "=== Deploying Zookeeper ==="
-                cat > /tmp/single-instance.yml <<'OPSFILE'
+                # Deploy zookeeper using light stemcell
+                echo "=== Deploying Zookeeper with Light Stemcell ==="
+                cat > /tmp/light-stemcell-ops.yml <<'OPSFILE'
                 ---
                 - type: replace
                   path: /instance_groups/name=zookeeper/instances
@@ -869,14 +914,17 @@ jobs:
                 - type: remove
                   path: /instance_groups/name=smoke-tests
                 - type: replace
-                  path: /stemcells/alias=default/os
-                  value: ubuntu-jammy
+                  path: /stemcells
+                  value:
+                    - alias: default
+                      os: ubuntu-noble
+                      version: light
                 OPSFILE
                 
                 bosh -n deploy \
                   -d zookeeper \
                   zookeeper-release/manifests/zookeeper.yml \
-                  -o /tmp/single-instance.yml
+                  -o /tmp/light-stemcell-ops.yml
                 
                 echo "=== Zookeeper Deployment Status ==="
                 bosh -d zookeeper instances --details
@@ -885,7 +933,7 @@ jobs:
                 echo "=== Cleaning Up ==="
                 bosh -d zookeeper -n delete-deployment
                 
-                 echo "=== Pipeline Complete - Upstream Warden CPI SUCCESS ==="
+                echo "=== SUCCESS: Upstream Warden CPI with Light Stemcell ==="
 
   #! Build a patched Ubuntu Noble stemcell image that removes a problematic nftables line
   - name: build-noble-patched-stemcell-image
