--- a/pipeline-template.yml
+++ b/pipeline-template.yml
@@ -70,16 +70,6 @@ resources:
       password: ((docker_registry_password))
       insecure: true
 
-  - name: patched-upstream-warden-cpi-image
-    type: registry-image
-    icon: docker
-    source:
-      repository: ((docker_registry_host))/patched-upstream-warden-cpi
-      tag: latest
-      username: admin
-      password: ((docker_registry_password))
-      insecure: true
-
   - name: bosh-repo
     type: git
     icon: github
@@ -911,79 +901,9 @@ jobs:
         get_params:
           skip_download: true
 
-  - name: build-patched-upstream-warden-cpi-image
-    plan:
-      - in_parallel:
-          - get: upstream-warden-cpi-image
-            trigger: true
-            passed: [build-upstream-warden-cpi-image]
-          - get: oci-build-task
-      - task: create-patched-dockerfile
-        image: oci-build-task
-        config:
-          platform: linux
-          outputs:
-            - name: build-context
-          run:
-            path: sh
-            args:
-              - -exc
-              - |
-                mkdir -p build-context
-                cat > build-context/Dockerfile << 'DOCKERFILE'
-                ARG BASE_IMAGE
-                FROM $BASE_IMAGE
-
-                # Patch start-bosh to add light stemcell ops-file
-                RUN cat > /tmp/patch.sed << 'SED'
-                /additional_ops_files=""/a\
-                # Add light stemcell ops-file for warden-light format\
-                additional_ops_files="${additional_ops_files} -o /usr/local/warden-light.yml"
-                SED
-
-                RUN sed -i -f /tmp/patch.sed /usr/local/bin/start-bosh
-
-                # Create the warden-light ops-file
-                RUN cat > /usr/local/warden-light.yml << 'OPSFILE'
-                ---
-                - type: replace
-                  path: /stemcells
-                  value:
-                  - alias: default
-                    os: ubuntu-noble
-                    version: light
-                OPSFILE
-
-                DOCKERFILE
-
-                cat build-context/Dockerfile
-      - task: build-image
-        privileged: true
-        image: oci-build-task
-        timeout: 15m
-        config:
-          platform: linux
-          inputs:
-            - name: build-context
-            - name: upstream-warden-cpi-image
-          outputs:
-            - name: image
-          params:
-            CONTEXT: build-context
-            IMAGE_ARG_BASE_IMAGE: upstream-warden-cpi-image/image.tar
-            BUILDKIT_PROGRESS: plain
-          run:
-            path: sh
-            args:
-              - -c
-              - |
-                 mount -t cgroup2 none /sys/fs/cgroup 2>/dev/null || true
-                 exec build
-      - put: patched-upstream-warden-cpi-image
-        params:
-          image: image/image.tar
-        get_params:
-          skip_download: true
+  #! NOTE: build-patched-upstream-warden-cpi-image is disabled
+  #! Reason: Registry-image resources dont produce image.tar when using GET
+  #! Solution: Patches are applied at runtime in deploy-zookeeper-on-upstream-warden task
 
 
   #! Deploy zookeeper using unmodified upstream warden-cpi image for comparison
@@ -1061,7 +981,28 @@ jobs:
                 mkdir -p /sys/fs/cgroup
                 mount -t cgroup2 none /sys/fs/cgroup || echo "cgroup2 already mounted"
                 
-                # Use upstream start-bosh script
+                # Patch start-bosh to add light stemcell ops-file support
+                echo "=== Patching start-bosh for light stemcell support ==="
+                cat > /tmp/patch.sed << 'PATCH_SED'
+                /additional_ops_files=""/a\
+                # Add light stemcell ops-file for warden-light format\
+                additional_ops_files="${additional_ops_files} -o /usr/local/warden-light.yml"
+                PATCH_SED
+                sed -i -f /tmp/patch.sed /usr/local/bin/start-bosh
+                
+                # Create the warden-light ops-file that start-bosh will use
+                echo "=== Creating warden-light ops-file ==="
+                cat > /usr/local/warden-light.yml << 'WARDEN_LIGHT_OPS'
+                ---
+                - type: replace
+                  path: /stemcells
+                  value:
+                  - alias: default
+                    os: ubuntu-noble
+                    version: light
+                WARDEN_LIGHT_OPS
+                
+                # Use upstream start-bosh script (now patched)
                 echo "=== Starting BOSH Director ==="
                 /usr/local/bin/start-bosh
                 
