Refactor pipeline to use modular job files with dry-run support
- Remove monolithic pipeline-template.yml and split into modular components
- Create pipeline-jobs/resources.yml with all resources and YTT header
- Create pipeline-jobs/schema.yml for YTT data values schema
- Extract build-noble-patched-stemcell-image job to separate file
- Update deploy-zookeeper-on-upstream-warden to plain format (remove overlay syntax)
- Update build-upstream-warden-cpi-image with /var/vcap/bosh directory patch
- Update repipe.sh to combine modular files using bash pipes
- Add --dry-run flag to repipe.sh using fly set-pipeline --check-creds
- Remove pipeline-template.yml, pipeline-template-new.yml, pipeline-template-original.yml

--- a/pipeline-jobs/build-upstream-warden-cpi-image.yml
+++ b/pipeline-jobs/build-upstream-warden-cpi-image.yml
@@ -41,6 +41,12 @@
                 # Copy bosh-deployment
                 cp -r bosh-deployment-repo build-context/bosh-deployment
                 
+                # Patch Dockerfile to create /var/vcap/bosh directory
+                # This is required for warden-cpi metadata persistence
+                echo "" >> build-context/Dockerfile
+                echo "# Create warden-cpi metadata directory" >> build-context/Dockerfile
+                echo "RUN mkdir -p /var/vcap/bosh" >> build-context/Dockerfile
+                
                 echo "=== Build context (pure upstream noble-cut-over) ==="
                 ls -la build-context/
                 echo "=== Dockerfile ==="
