Add Noble stemcell validation for NATS firewall tests
- Make existing Jammy job OS-aware for service manager (systemd vs runit)
- Add new Noble job to validate systemd-based stemcell support
- Update pipeline groups to include new Noble validation job

--- a/pipeline-jobs/groups.yml
+++ b/pipeline-jobs/groups.yml
@@ -24,6 +24,7 @@ groups:
   - name: bosh-agent-integration-firewall
     jobs:
       - test-bosh-agent-integration-firewall
+      - test-bosh-agent-integration-firewall-noble
 
   - name: all
     jobs:
@@ -38,3 +39,4 @@ groups:
       - deploy-zookeeper-on-warden-runc
       - deploy-zookeeper-on-docker-bosh
       - test-bosh-agent-integration-firewall
+      - test-bosh-agent-integration-firewall-noble
